# football-AI

./: README.md  pyproject.toml
football_players_tracker/: ball_tracking.py  detect_players.py  detect_players_with_trace.py  helper.py  radar_view.py  track_players_distance_to_ball.py  track_players_with_teams.py  train.py  voronoi_graph_view.py
football_players_tracker/notebooks/: Untitled.ipynb  testing.ipynb
football_players_tracker/runs/fine_tuning_yolov5s_freezed_based_model/train/: args.yaml  events.out.tfevents.1724331365.mikolajs-comp.14044.0  results.csv
football_players_tracker/runs/fine_tuning_yolov5s_freezed_based_model/train2/: args.yaml  events.out.tfevents.1724331496.mikolajs-comp.14167.0  results.csv
football_players_tracker/runs/fine_tuning_yolov8x_freezed_based_model/train/: args.yaml  events.out.tfevents.1724414122.mikolajs-comp.9725.0
football_players_tracker/runs/fine_tuning_yolov8x_freezed_based_model/train2/: args.yaml  events.out.tfevents.1724414200.mikolajs-comp.9813.0
football_players_tracker/runs/fine_tuning_yolov8x_freezed_based_model/train3/: args.yaml  events.out.tfevents.1724414451.mikolajs-comp.10022.0
football_players_tracker/runs/fine_tuning_yolov8x_freezed_based_model/train4/: args.yaml  events.out.tfevents.1724414512.mikolajs-comp.10107.0
