[tool.poetry]
name = "football-players-tracker"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
ipykernel = "^6.29.5"
torch = "^2.4.0"
numpy = "^1.26.4"
opencv-python = "4.9.0.80"
pandas = "^2.2.2"
requests = "2.31.0"
pillow = "^10.4.0"
ultralytics = "8.2.83"
cvzone = "^1.6.1"
supervision = "^0.22.0"
loguru = "^0.7.2"
transformers = "^4.44.2"
sentencepiece = "^0.2.0"
scikit-learn = "^1.5.1"
umap-learn = "^0.5.6"
collection = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
